# rust_job_search

./: .gitignore  Cargo.toml  README.md  refinery.toml
migrations/: V10__interviews_v2.sql  V11__job_posting_drop_recuiter_id_column.sql  V12__drop_recruiter_table.sql  V13__contacts_v2.sql  V14__notes_v2.sql  V1__company.sql  V2__contacts.sql  V3__recruiters.sql  V4__job_posting.sql  V5__interview_type.sql  V6__interviews.sql  V7__notes.sql  V8__add_interview_types.sql  V9__job_postings_v2.sql
src/: db.rs  main.rs
src/models/: company.rs  contacts.rs  interview_types.rs  interviews.rs  job_postings.rs  mod.rs  notes.rs  recruiters.rs
src/ui/: application.rs  counter.rs  create_company.rs  create_job_posting.rs  mod.rs  view_companies.rs  welcome_page.rs
