[package]
name = "rust_job_search"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["clock"] }
chrono-tz = { version = "0.10.4", features = ["case-insensitive"] }
iced = { version = "0.13.1", features = ["debug"] }
iced_aw = { version = "0.11", features = ["date_picker", "menu", "selection_list", "drop_down", "wrap", "spinner", "slide_bar"] }
refinery = { version = "0.9.0", features = ["rusqlite-bundled"] }
rusqlite = { version = "0.37.0", features = ["bundled", "chrono", "url"] }
url = "2.5.7"
